--- a/style.css
+++ b/style.css
@@ -1,19 +1,32 @@
+body {
+    background: linear-gradient( skyblue lightgreen);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    margin: 40px;
+}
+#logo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 h1{
-    font-family: serifVerdana, sans-serif
+    font-family: sans-serif;
+    font-size: 60px;
 }
 .potatoBtn {
     margin: 3px;
-    border: solid rgb(0, 0, 0) 2px;
+    border: outset black 2px;
     border-radius: 5px;
     padding: 2px;
     background-color:rgba(2, 4, 141, 0.144);
     width: 60px;
     height: 22px;
-    transition: 250ms
+    transition: 250ms;
 }
 .potatoBtn:hover{
     width: 70px;
     height: 27px;
+    box-shadow: 0px 5px 5px rgba(1, 3, 97, 0.2);
 }
 #brmenu {
     display: none;
