--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
 }
 #logo {
     display: block;
-    margin-left: 50%;
-    margin-right: 50%;
+    margin-left: auto;
+    margin-right: auto;
 }
 h1{
     font-family: sans-serif;
